--- a/requirements.build.txt
+++ b/requirements.build.txt
@@ -1,4 +1,6 @@
-build>=0.7.0
-pytest>=7.0.0
-setuptools>=58
-twine>=3.8.0
+build>=0.8.0
+coverage>=6.4
+pytest>=7.1.2
+setuptools>=63.2
+twine>=4.0.1
+-rrequirements.deploy.txt
