Added sparqlc namespace, renamed project to sparql-connect, updated README

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-name = sparql2
-version = file: sparql2/version.txt
+name = sparql-connector
+version = file: src/version.txt
 author = Vlastimil Chvojka
 author_email = 9798475+vlastocom@users.noreply.github.com
-description = SPARQL client based on sparql-client
+description = SPARQL connector based on sparql-client library
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/vlastocom/sparql2
+url = https://github.com/vlastocom/sparql-connector
 project_urls =
-    Bug Tracker = https://github.com/vlastocom/sparql2/issues
+    Bug Tracker = https://github.com/vlastocom/sparql-connector/issues
 classifiers =
     Programming Language :: Python :: 3.10
     License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
@@ -16,12 +16,14 @@ classifiers =
 
 [options]
 package_dir =
-    = sparql2
+    = src
 packages = find:
 python_requires = >=3.10
 include_package_data = True
+install_requires =
+    overrides>=6.1.0
+    python-dateutil==2.8.2
+    urllib3==1.26.10
 
 [options.packages.find]
-where = sparql2
-
-[tox:tox]
+where = src
