--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py310
 
 [testenv]
 deps = -rrequirements.build.txt
-changedir = sparql2
+changedir = src
 commands = coverage run -m pytest ../test
 
 [testenv:coverage-report]
