Fixed integration tests, README.md and few small errors.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = sparql-connector
-version = file: src/version.txt
+version = file: src/sparqlc/version.txt
 author = Vlastimil Chvojka
 author_email = 9798475+vlastocom@users.noreply.github.com
 description = SPARQL connector based on sparql-client library
