Updated and loosened dependencies to make them more resolvable

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,9 +21,9 @@ packages = find:
 python_requires = >=3.10
 include_package_data = True
 install_requires =
-    overrides>=6.1.0
-    python-dateutil==2.8.2
-    urllib3==1.26.10
+    overrides~=6.2.0
+    python-dateutil~=2.8.2
+    urllib3~=1.26.11
 
 [options.packages.find]
 where = src
