--- a/requirements.build.txt
+++ b/requirements.build.txt
@@ -1,7 +1,7 @@
-build>=0.8.0
-coverage>=6.4
-pytest>=7.1.2
-setuptools>=63.2
-tox>=3.25
-twine>=4.0.1
+build~=0.8.0
+coverage~=6.4.4
+pytest~=7.1.2
+setuptools~=65.1
+tox~=3.25.1
+twine~=4.0.1
 .
